syntax = "proto3";

package common;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

message IdNameIdentifier {
    option (buf.validate.message).oneof = { fields: ["id", "name"], required: true };
    string id = 1 [(buf.validate.field).string.uuid = true];
    string name = 2 [
      (buf.validate.field).string.min_len = 1,
      (buf.validate.field).string.max_len = 253,
      (buf.validate.field).cel = {
        id: "name_format"
        message: "Name must be an alphanumeric string, allowing hyphens and underscores but not as the first or last character. The stored name will be normalized to lower case."
        expression: "this.matches('^[a-zA-Z0-9](?:[a-zA-Z0-9_-]*[a-zA-Z0-9])?$')"
      }
    ];
}

message IdFqnIdentifier {
    option (buf.validate.message).oneof = { fields: ["id", "fqn"], required: true };
    string id = 1 [(buf.validate.field).string.uuid = true];
    string fqn = 2 [(buf.validate.field).string = {
        min_len: 1
        uri: true
    }];
}

// Struct to uniquely identify a resource with optional additional metadata
message Metadata {
  // created_at set by server (entity who created will recorded in an audit event)
  google.protobuf.Timestamp created_at = 1;
  // updated_at set by server (entity who updated will recorded in an audit event)
  google.protobuf.Timestamp updated_at = 2;
  // optional short description
  map<string, string> labels = 3;
}

message MetadataMutable {
  // optional labels
  map<string, string> labels = 3;
}

enum MetadataUpdateEnum {
  // unspecified update type
  METADATA_UPDATE_ENUM_UNSPECIFIED = 0;
  // only update the fields that are provided
  METADATA_UPDATE_ENUM_EXTEND = 1;
  // replace the entire metadata with the provided metadata
  METADATA_UPDATE_ENUM_REPLACE = 2;
}

// buflint ENUM_VALUE_PREFIX: to make sure that C++ scoping rules aren't violated when users add new enum values to an enum in a given package
enum ActiveStateEnum {
  ACTIVE_STATE_ENUM_UNSPECIFIED = 0;
  ACTIVE_STATE_ENUM_ACTIVE = 1;
  ACTIVE_STATE_ENUM_INACTIVE = 2;
  ACTIVE_STATE_ENUM_ANY = 3;
}

// message ListOptions {
// TODO: limit/offset [https://github.com/opentdf/platform/issues/55]
// }
